Add About section

--- a/home.html
+++ b/home.html
@@ -1,3 +1,6 @@
+<img src="/img/layer1.svg" id="layer1">
+<img src="/img/layer2.svg" id="layer2">
+
 <div class="row" id="icons">
   <div class="small-12 columns align-center">
     <img src="/img/icons.svg" alt="Kent Hack Enough">
@@ -40,5 +43,34 @@
         </div>
       </div>
     </form>
+  </div>
+</div>
+
+<div id="about">
+  <div class="row">
+    <div class="small-12 columns">
+      <div class="row">
+        <div class="small-12 columns">
+          <h2>ABOUT</h2>
+          <p>
+            Kent Hack Enough, hacKSU's annual hackathon, brings the passion and innovation behind hackathons to the Midwest. With over 300 participants, Kent Hack Enough will be the largest hackathon in Ohio. Top prizes will include cash and exposure to top companies. Admission is completely free for students, and travel costs will be reimbursed.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 large-6 columns">
+          <h3>RULES</h3>
+          <p>
+            In order to participate you must be a undergraduate or graduate student at a college or university. Contact us if you're a high school student wanting to participate. Projects must be started from scratch, but the use of 3rd party libraries and APIs are allowed. Team sizes are limited to 4 people.
+          </p>
+        </div>
+        <div class="small-12 large-6 columns">
+          <h3>TRAVEL</h3>
+          <p>
+            If you are traveling from outside of Kent, we will reimburse travel costs, so there really is no excuse you kent attend! Contact us for more information.
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
