--- a/home.html
+++ b/home.html
@@ -1,48 +1,50 @@
-<img src="/img/layer1.svg" id="layer1">
-<img src="/img/layer2.svg" id="layer2">
+<div id="splash">
 
-<div class="row" id="icons">
-  <div class="small-12 columns align-center">
-    <img src="/img/icons.svg" alt="Kent Hack Enough">
+  <parallax-background></parallax-background>
+
+  <div class="row" id="icons">
+    <div class="small-12 columns align-center">
+      <img src="/img/icons.svg" alt="Kent Hack Enough">
+    </div>
   </div>
-</div>
 
-<div class="row" id="logo">
-  <div class="small-12 columns align-center">
-    <img src="/img/logo.svg" alt="Kent Hack Enough">
+  <div class="row" id="logo">
+    <div class="small-12 columns align-center">
+      <img src="/img/logo.svg" alt="Kent Hack Enough">
+    </div>
   </div>
-</div>
 
-<div class="row" id="date">
-  <div class="small-12 columns align-center">
-    <h2>OCTOBER 9 - 11, 2015 <span class="horizontal-spacer">|</span> KENT STATE UNIVERSITY</h2>
+  <div class="row" id="date">
+    <div class="small-12 columns align-center">
+      <h2>OCTOBER 9 - 11, 2015 <span class="horizontal-spacer">|</span> KENT STATE UNIVERSITY</h2>
+    </div>
   </div>
-</div>
 
-<div class="row" id="contact">
-  <div class="small-12 columns align-center">
-    <h4>
-      <a target="_blank" href="/SponsorshipPacket.pdf">Interested in sponsoring?</a>
-      Contact us at: <a href="mailto:staff@khe.io">staff@khe.io</a>
-    <h4>
+  <div class="row" id="contact">
+    <div class="small-12 columns align-center">
+      <h4>
+        <a target="_blank" href="/SponsorshipPacket.pdf">Interested in sponsoring?</a>
+        Contact us at: <a href="mailto:staff@khe.io">staff@khe.io</a>
+      <h4>
+    </div>
   </div>
-</div>
 
-<div class="row" id="updates">
-  <div class="small-12 large-4 large-offset-4 columns">
-    <p class="align-center">Get updates about KHE:</p>
-    <p ng-if="home.success" class="align-center">Thanks, you'll be hearing from us soon!</p>
-    <p ng-if="home.error" class="align-center">That email is already in use.</p>
-    <form ng-if="!home.success" ng-submit="home.mail()">
-      <div class="row collapse">
-        <div class="small-10 columns">
-          <input type="text" placeholder="Email" ng-model="home.email">
+  <div class="row" id="updates">
+    <div class="small-12 large-4 large-offset-4 columns">
+      <p class="align-center">Get updates about KHE:</p>
+      <p ng-if="home.success" class="align-center">Thanks, you'll be hearing from us soon!</p>
+      <p ng-if="home.error" class="align-center">That email is already in use.</p>
+      <form ng-if="!home.success" ng-submit="home.mail()">
+        <div class="row collapse">
+          <div class="small-10 columns">
+            <input type="text" placeholder="Email" ng-model="home.email">
+          </div>
+          <div class="small-2 columns">
+            <button href="#" class="button postfix">Go</button>
+          </div>
         </div>
-        <div class="small-2 columns">
-          <button href="#" class="button postfix">Go</button>
-        </div>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
 </div>
 
