--- a/home.html
+++ b/home.html
@@ -2,6 +2,8 @@
 
   <parallax-background></parallax-background>
 
+  <a id="mlh-trust-badge" style="position:fixed;top:0;right:50px;max-width:100px;width:10%;min-width: 60px;display:block;z-index:10000" href="https://mlh.io/?utm_campaign=Trust%20Badge" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/f2015.png" alt="MLH Official - Fall 2015" style="width:100%;" ></a>
+
   <div class="row" id="icons">
     <div class="small-12 columns align-center">
       <img src="/img/icons.svg" alt="Kent Hack Enough">
@@ -17,15 +19,6 @@
   <div class="row" id="date">
     <div class="small-12 columns align-center">
       <h2>OCTOBER 9 - 11, 2015 <span class="horizontal-spacer">|</span> KENT STATE UNIVERSITY</h2>
-    </div>
-  </div>
-
-  <div class="row" id="contact">
-    <div class="small-12 columns align-center">
-      <h4>
-        <a target="_blank" href="/SponsorshipPacket.pdf">Interested in sponsoring?</a>
-        Contact us at: <a href="mailto:staff@khe.io">staff@khe.io</a>
-      <h4>
     </div>
   </div>
 
@@ -48,7 +41,7 @@
   </div>
 </div>
 
-<div id="about">
+<div class="dark-section">
   <card></card>
   <div class="row">
     <div class="small-12 columns">
@@ -56,7 +49,7 @@
         <div class="small-12 columns">
           <h2>ABOUT</h2>
           <p>
-            Kent Hack Enough, hacKSU's annual hackathon, brings the passion and innovation behind hackathons to the Midwest. With over 300 participants, Kent Hack Enough will be the largest hackathon in Ohio. Top prizes will include cash and exposure to top companies. Admission is completely free for students, and travel costs will be reimbursed.
+            Kent Hack Enough, hacKSU's annual hackathon, brings the passion and innovation behind hackathons to the Midwest. With over 250 participants, Kent Hack Enough will be the largest hackathon in Ohio. Top prizes will include cash and exposure to top companies. Admission is completely free for students, and travel costs will be reimbursed.
           </p>
         </div>
       </div>
@@ -64,7 +57,7 @@
         <div class="small-12 large-6 columns">
           <h3>RULES</h3>
           <p>
-            In order to participate you must be a undergraduate or graduate student at a college or university. Contact us if you're a high school student wanting to participate. Projects must be started from scratch, but the use of 3rd party libraries and APIs are allowed. Team sizes are limited to 4 people.
+            In order to participate you must be a undergraduate or graduate student at a college or university. Contact us if you're a high school student wanting to participate. Projects must be started from scratch, but the use of 3rd party libraries and APIs are allowed. Team sizes are limited to 4 people. We aspire to be welcoming to everyone at KHE, and we adhere to the <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf" class="white" target="_blank">MLH Code of Conduct</a>.
           </p>
         </div>
         <div class="small-12 large-6 columns">
@@ -77,3 +70,100 @@
     </div>
   </div>
 </div>
+
+<div class="light-section">
+  <div class="row">
+    <div class="small-12 columns">
+      <div class="row">
+        <div class="small-12 columns">
+          <h2>SPONSORS</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 columns">
+          <br>
+          <p>
+            Interested in sponsoring KHE 2015? Take a look at our
+            <a target="_blank" href="/SponsorshipPacket.pdf">sponsorship packet</a>
+            and <a href="mailto:staff@khe.io">contact us</a> (staff@khe.io).
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="dark-section">
+  <div class="row">
+    <div class="small-12 columns">
+      <div class="row">
+        <div class="small-12 columns">
+          <h2>CONTACT</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 large-6 columns">
+          <p>
+            If you have any questions, concerns, or problems, please do not hesitate to contact us. One of our organizers will get back to you as soon as humanly possible.
+          </p>
+          <p>
+            For questions regarding travel reimbursement, please leave your name, where you are traveling from, and tell us a little bit about yourself.
+          </p>
+        </div>
+        <div class="small-12 large-6 columns">
+          <form>
+            <!-- Subject -->
+            <div class="row">
+              <div class="small-12 columns">
+                <label>
+                  Subject
+                  <input type="text" placeholder="Travel Reimbursement">
+                </label>
+              </div>
+            </div>
+            <!-- Name -->
+            <div class="row">
+              <div class="small-12 columns">
+                <label>
+                  Name
+                  <input type="text" placeholder="John Doe">
+                </label>
+              </div>
+            </div>
+            <!-- Reply to -->
+            <div class="row">
+              <div class="small-12 columns">
+                <label>
+                  Email
+                  <input type="text" placeholder="name@example.com">
+                </label>
+              </div>
+            </div>
+            <!-- Body -->
+            <div class="row">
+              <div class="small-12 columns">
+                <label>
+                  Body
+                  <textarea rows="6" placeholder="What's up?"></textarea>
+                </label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="small-12 columns">
+                <button>Send</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<footer>
+  <div class="container">
+    <p>POWERED BY</p>
+    <a href="http://hacksu.com" target="_blank"><img src="/img/hacksu-logo.svg" alt="HacKSU" id="hacksu-logo"></a>
+    <a href="http://mlh.io" target="_blank"><img src="/img/mlh-logo.svg" alt="MLH" id="mlh-logo"></a>
+  </div>
+</footer>
