Add short logo to img resources

--- a/login.html
+++ b/login.html
@@ -2,8 +2,8 @@
   <p>{{error}}</p>
 </div>
 
-<form ng-submit="home.login()">
-  <input type="email" ng-model="home.email" placeholder="Email">
-  <input type="password" ng-model="home.password" placeholder="Password">
+<form ng-submit="home.person.login()">
+  <input type="email" ng-model="home.person.email" placeholder="Email">
+  <input type="password" ng-model="home.person.password" placeholder="Password">
   <button>Login</button>
 </form>
