--- a/home.html
+++ b/home.html
@@ -47,23 +47,28 @@
     <div class="small-12 columns">
       <div class="row">
         <div class="small-12 columns">
-          <h2>ABOUT</h2>
+         <h1>DESIGN. BUILD. PARTY.</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 columns">
+          <h3>ABOUT</h3>
           <p>
-            Kent Hack Enough is the annual fall hackathon at Kent State University. We bring some Kent State culture to the classic hackathon by mixing in some party With over 250 participants, Kent Hack Enough will be the largest hackathon in Ohio. Top prizes will include cash and exposure to top companies. Admission is completely free for students, and travel costs will be reimbursed.
+            Kent Hack Enough brings hackers from all over the nation together to learn something new, party hard, and create something awesome. With more than 250 other highly motivated, creative, and talented participants, Kent Hack Enough is a weekend-long event where students from all areas of interest come together to make something awesome, like an app, website or hardware hack. The entire event is free for students, including food, energy drinks, and swag. In between all the coding, designing, and water pong, our sponsors are available as mentors to provide help and expertise throughout the hacking process.
           </p>
         </div>
       </div>
       <div class="row">
         <div class="small-12 large-6 columns">
-          <h3>RULES</h3>
+          <h3>ATTENDEES</h3>
           <p>
-            In order to participate you must be a undergraduate or graduate student at a college or university. Contact us if you're a high school student wanting to participate. Projects must be started from scratch, but the use of 3rd party libraries and APIs are allowed. Team sizes are limited to 4 people. We aspire to be welcoming to everyone at KHE, and we adhere to the <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf" class="white" target="_blank">MLH Code of Conduct</a>.
+            Kent Hack Enough is free and open to students of all majors. If you are a high school student or a minor, please contact us for more information about how to attend. We’ll send you a waiver for your parents to sign and return before the event, and then you’ll be allowed in. If you’re traveling to Kent, please contact us for more information about travel reimbursement.
           </p>
         </div>
         <div class="small-12 large-6 columns">
-          <h3>TRAVEL</h3>
+          <h3>RULES</h3>
           <p>
-            If you are traveling from outside of Kent, we will reimburse travel costs, so there really is no excuse you kent attend! Contact us for more information.
+            We require that all entries be created from scratch, during the competition. The use of 3rd party libraries and APIs is allowed and encouraged. Teams are limited to four people. To provide hackers with the best possible environment for learning, networking, and creating we adhere to the <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf" class="white" target="_blank">MLH Code of Conduct</a>.
           </p>
         </div>
       </div>
