Add button to input boxes

--- a/apply.html
+++ b/apply.html
@@ -14,7 +14,7 @@
           {{application.name}}
           <span class="input">
             <input type="text" placeholder="John Doe" data-subline="Your full name" ng-model="application.name">
-            <label>Your full name</label>
+            <label>Your full name <button><i class="fa fa-arrow-right"></i></button></label>
           </span>
         </span>,
         a
