Fix input width

--- a/apply.html
+++ b/apply.html
@@ -26,6 +26,7 @@
               <option value="female">female</option>
               <option value="other">other</option>
             </select>
+            <label>Your gender <button></button></label>
           </span>
         </span>
         student at
@@ -96,7 +97,7 @@
             </select>
           </span>
         </span>
-        my first hackathon.
+        my first <span contenteditable>hackathon</span>.
         <br>
         I have the following dietary restrictions:
         <span class="checkbox">
