--- a/home.html
+++ b/home.html
@@ -171,7 +171,7 @@
   </div>
 </div>
 
-<footer>
+<footer id="site-footer">
   <div class="container">
     <p>POWERED BY</p>
     <a href="http://hacksu.com" target="_blank"><img src="/img/hacksu-logo.svg" alt="HacKSU" id="hacksu-logo"></a>
